PROJECT(MFHOWARDS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)

# Install
SET(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/mfhowards/mfhowards ${PROJECT_SOURCE_DIR}/mfhowards/mfhowards.hpp DESTINATION include)

# C++11
SET(CMAKE_CXX_STANDARD 11)

# Module path
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})

# Eigen
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

# mfhowards
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/mfhowards)

# Set appropriate optimization flags
SET(CMAKE_BUILD_TYPE Release)

# Where to output binaries
SET(PROJECT_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_SUBDIRECTORY(examples)
